<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textColor="#0a0"
        android:textSize="25sp"
        android:id="@+id/txtTitle"
        android:gravity="center"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/tip_btn"
        android:layout_width="409dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tip_calc_btn" />

    <Button
        android:id="@+id/mpg_btn"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/gas_calc_btn" />

    <Button
        android:id="@+id/tax_btn"
        android:layout_width="409dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tax_calc_btn" />

</LinearLayout>